apps/coolstore/overlays/coolstore-ns/inventory-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
  name: inventory
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: latest
    app.openshift.io/runtime: quarkus
spec:
  path: /
  to:
    kind: Service
    name: inventory
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
